--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   },
   "dependencies": {
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/datetimepicker": "^6.0.2",
+    "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.1.1",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "moment": "^2.29.1",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-dropdown-picker": "^5.3.0",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-modal-datetime-picker": "^13.1.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-radio-button": "^2.0.1",
-    "react-native-safe-area-context": "^4.1.2",
+    "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
     "react-native-select-dropdown": "^1.8.0",
     "react-native-splash-screen": "^3.3.0",
